fix(input-group): fix alignment when in small size version

--- a/packages/react-components/src/components/input-group/input-group.module.css
+++ b/packages/react-components/src/components/input-group/input-group.module.css
@@ -32,6 +32,8 @@
   }
 
   .End {
+    line-height: 1rem;
+
     & *:is(button, input, a, select, fieldset[tabindex='0']) {
       outline-offset: -2px;
     }
